# flask_pie_highcharts_demo

./: README.md  app.py  data.py  pyproject.toml
static/css/: main.css
static/js/: main.js
templates/: index.html
